--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 
 /* ヘッダー部分（Heroセクション） */
 header.hero {
-    background-image: url('images/coffee.jpg'); /* 背景画像の設定 */
+    background-image: url('techs pic/TECHSLOGO.jpg'); /* 背景画像の設定 */
     background-size: cover; /* 画像をコンテナ全体に拡大 */
     background-position: center; /* 画像を中央に配置 */
     height: 100vh; /* ビューポート全体の高さ */
