--- a/style.css
+++ b/style.css
@@ -293,7 +293,7 @@ section#join button:hover {
     bottom: 20px; /* Instagramと同じ高さ */
     right: 80px; /* 画面右端からの距離 */
     z-index: 1000;
-    background-color: #fff;
+    background-color: 	0F1419;
     border-radius: 50%;
     width: 50px;
     height: 50px;
