--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ header.hero p {
 
 .about-container img {
     flex: 1; /* PCで画像が左側の半分を占める */
-    max-width: 100%; /* 親要素の幅に収まる */
+    max-width: 50%; /* 親要素の幅に収まる */
     height: auto; /* アスペクト比を維持 */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 軽い影を追加 */
 }
@@ -177,7 +177,7 @@ footer {
 .event-section {
     position: relative; /* 子要素の位置を基準に調整 */
     height: 100vh; /* ヘッダーと同じ高さ */
-    background-image: url('techs pic/texp3jpg');
+    background-image: url('techs pic/texp3.jpg');
     background-size: cover; /* 背景画像を全体に拡大 */
     background-position: center; /* 背景画像を中央に配置 */
     color: white; /* テキストを白に設定 */
